--- a/CV_Website/assets/css/styles.css
+++ b/CV_Website/assets/css/styles.css
@@ -335,21 +335,75 @@ img{
 }
 
 /*========== SKILLS AND LANGUAGES ==========*/
-.skills__content{
+.education__content,
+.experience__content{
+  display: flex;
+}
+
+.education__time,
+.experience__time{
+  padding-right: 1rem;
+}
+
+.education__rounder,
+.experience__rounder{
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: var(--text-color-light);
+  border-radius: 50%;
+  margin-top: .25rem;
+}
+
+.education__line,
+.experience__line{
+  display: block;
+  width: 2px;
+  height: 110%;
+  background-color: var(--text-color-light);
+  transform: translate(7px, 0);
+}
+
+.education__data,
+.experience__data{
+  gap: .5rem;
+}
+
+.education__title,
+.experience__title{
+  font-size: var(--h3-font-size);
+}
+
+.education__studies
+.experience__company{
+  font-size: var(--small-font-size);
+  color: var(--title-color);
+}
+
+.education__year{
+  font-size: var(--smaller-font-size);
+}
+
+/*========== SKILLS AND LANGUAGES ==========*/
+.skills__content,
+.languages__content{
   grid-template-columns: repeat(2, 1fr);
 }
 
-.skills__content{
+.languages__content{
   gap: 0;
 }
 
-.skills__name{
+.skills__name,
+.languages__name{
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-3);
 }
 
-.skills__circle{
+.skills__circle,
+.languages__circle{
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -358,14 +412,23 @@ img{
   margin-right: .75rem;
 }
 
-/*========== CERTIFICATES ==========*/
-
-
-/*========== REFERENCES ==========*/
-
-
 /*========== INTERESTS ==========*/
+.interests__container{
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: var(--mb-2);
+}
 
+.interests__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.interests__icon{
+  font-size: 1.5rem;
+  color: var(--text-color-light);
+  margin-bottom: .25rem;
+}
 
 /* Scroll top */
 
