--- a/CV_Website/assets/css/styles.css
+++ b/CV_Website/assets/css/styles.css
@@ -46,9 +46,28 @@ html{
 }
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+  --title-color: #F2F2F2;
+  --text-color: #BFBFBF;
+  --container-color: #212121;
+  --container-color-alt: #181616;
+  --body-color: #2B2B2B;
+}
 
 /*========== Button Dark/Light ==========*/
+.change-theme{
+  position: absolute;
+  right: 0;
+  top: 2.2rem;
+  display: flex;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.change-theme:hover{
+  color: var(--title-color);
+}
 
 
 /*========== Font size variables to scale cv ==========*/
@@ -291,50 +310,6 @@ img{
 }
 
 /*========== EDUCATION AND EXPERIENCE ==========*/
-.education__content{
-  display: flex;
-}
-
-.education__time{
-  padding-right: 1rem;
-}
-
-.education__rounder{
-  position: relative;
-  display: block;
-  width: 16px;
-  height: 16px;
-  background-color: var(--text-color-light);
-  border-radius: 50%;
-  margin-top: .25rem;
-}
-
-.education__line{
-  display: block;
-  width: 2px;
-  height: 110%;
-  background-color: var(--text-color-light);
-  transform: translate(7px, 0);
-}
-
-.education__data{
-  gap: .5rem;
-}
-
-.education__title{
-  font-size: var(--h3-font-size);
-}
-
-.education__studies{
-  font-size: var(--small-font-size);
-  color: var(--title-color);
-}
-
-.education__year{
-  font-size: var(--smaller-font-size);
-}
-
-/*========== SKILLS AND LANGUAGES ==========*/
 .education__content,
 .experience__content{
   display: flex;
@@ -410,6 +385,30 @@ img{
   background-color: var(--text-color);
   border-radius: 50%;
   margin-right: .75rem;
+}
+
+/*========== CERTIFICATES ==========*/
+.certificate__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
+}
+
+/*========== REFERENCES ==========*/
+.references__content{
+  gap:.25rem;
+}
+
+.references__subtitle{
+  color: var(--text-color-light)
+}
+
+.references__subtitle,
+.references__contact{
+  font-size: var(--smaller-font-size);
+}
+
+.references__title{
+  font-size: var(--h3-font-size);
 }
 
 /*========== INTERESTS ==========*/
@@ -523,5 +522,3 @@ img{
     grid-template-columns: repeat(4, max-content);
   } 
 }
-
-
