--- a/CV_Website/assets/css/styles.css
+++ b/CV_Website/assets/css/styles.css
@@ -69,12 +69,23 @@ body.dark-theme{
   color: var(--title-color);
 }
 
-
 /*========== Font size variables to scale cv ==========*/
 
 
 /*========== Generate PDF button ==========*/
+.generate-pdf{
+  /*display: none*/
+  position: absolute;
+  top: 2.2rem;
+  left: 0;
+  font-size: 1.2rem;
+  color: var(--text-color);
+  cursor: pointer;
+}
 
+.generate-pdf:hover{
+  color: var(--title-color);
+}
 
 /*========== Classes modified to reduce size and print on A4 sheet ==========*/
 body{
@@ -494,6 +505,10 @@ img{
   .resume__left,
   .resume__right{
     padding: 0 1.5rem;
+  }
+
+  .generate-pdf{
+    display: inline-block;
   }
 
   .section-title,
